css to look like fb!
Co-Authored-By: ray <smith.raylene@gmail.com>
Co-Authored-By: shannon <shannongamby@hotmail.com>
Co-Authored-By: alfie <runticle@gmail.com>
Co-Authored-By: todd <toddpla@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #3b5998;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -29,4 +29,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
