--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
 body {
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -13,15 +11,51 @@ code {
     monospace;
 }
 
+div[name=post] {
+  margin: 15px auto;
+  width: 60%;
+  padding: 15px;
+  background-color: #FFFAFA
+}
+
+#navbar {
+  background-color: #3b5998
+}
+
 #message {
   width: 80%;
   float: right;
-  padding: 18px;
+  padding-left: 10px;
+}
+
+#comments {
+  width: 60%;
+  margin: auto;
+}
+
+.navbar a {
+  color: white;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: hotpink;
+  text-decoration: none;
+}
+
+div[name="comment"] {
+  margin: 8px auto;
+  padding: 1px 4px;
+  border-radius: 10px;
+  background-color: #e6e9ef;
 }
 
 #name_time {
+  color: #3b5998;
+  font-weight: bold;
   width: 20%;
   display: inline-block;
+  font-size: 0.6em;
 }
 
 #buttons {
@@ -30,6 +64,6 @@ code {
 }
 
 .button {
-  font-size: 0.5em;
+  font-size: 0.7em;
   float: right;
 }
