added new comment and new post components
Co-Authored-By: ray <smith.raylene@gmail.com>
Co-Authored-By: alfie <runticle@gmail.com>
Co-Authored-By: todd <toddpla@gmail.com>
Co-Authored-By: shannon <shannongamby@hotmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,21 @@ input, button {
   align-items: center;
 }
 
+textarea {
+  width: 100%
+}
+
+.new_message {
+  width: 40%;
+  align-items: center;
+  margin: auto;
+}
+
+.new_message button {
+  width: 20%;
+  margin: auto;
+}
+
 #navbar {
   color: white;
   background-color: #3b5998
