adds requests for new posts and comments and login/signup
Co-Authored-By: Imogen Misso <imogenmisso@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ div[name=post] {
   display: flex;
 }
 
-input, button {
+input, .submit_comment, .submit_message {
   display: block;
   width: 100%;
 }
