centers login/register links on homepage and defaults signup link to hidden

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@ div[name=post] {
 
 .form_container {
   display: flex;
+}
+
+#signup_link {
+  display:none;
+}
+
+#authentication {
   text-align: center;
 }
 
