--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,6 @@ div[name=post] {
   display: flex;
 }
 
-
-
 #signup_link {
   display:none;
 }
@@ -60,6 +58,13 @@ textarea {
 .new_comment button {
   width: 50%;
   margin: auto;
+}
+
+.new_comment textarea {
+  border-radius: 10px;
+  padding-left: 0.4em;
+  background-color: inherit;
+  border-color: lightgrey;
 }
 
 #navbar {
