edits login and signup forms css
Co-Authored-By: Imogen Misso <imogenmisso@users.noreply.github.com>
Co-Authored-By: Ray Smith <rsmith88@users.noreply.github.com>
Co-Authored-By: Shannon Gamby <shannongamby@users.noreply.github.com>
Co-Authored-By: Todd Langford-Archer <toddpla@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,32 @@ div[name=post] {
 }
 
 .form_container {
+  margin-top: 4em;
   display: flex;
+}
+
+.form_container input, button {
+  margin: 10px;
+  border-radius: 6px;
+  border: none;
+  padding: 5px;
+}
+
+.form_container button {
+  color: grey;
+  border-radius: 10px;
 }
 
 #signup_link {
   display:none;
 }
+
+#signup_link a:hover, #register_link a:hover {
+  color: hotpink;
+  text-decoration: none
+}
+
+
 
 #authentication {
   text-align: center;
