adds delete fetch req for posts
Co-Authored-By: Imogen Misso <imogenmisso@users.noreply.github.com>
Co-Authored-By: Ray Smith <rsmith88@users.noreply.github.com>
Co-Authored-By: Shannon Gamby <shannongamby@users.noreply.github.com>
Co-Authored-By: Todd Langford-Archer <toddpla@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,10 @@ textarea {
   margin: auto;
 }
 
+li {
+  list-style-type: none;
+}
+
 textarea {
   border-radius: 10px;
   padding-left: 0.4em;
@@ -165,4 +169,5 @@ div[name="comment"] {
 .button {
   font-size: 0.7em;
   float: right;
+  background-color: inherit;
 }
